--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ app.*.map.json
 /android/app/release
 
 .data
+
+# FVM Version Cache
+.fvm/
+
+# Firebase
+google-services.json
+GoogleService-Info.plist
+firebase.json
