--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = dadascanner
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.dadascanner
+PRODUCT_BUNDLE_IDENTIFIER = dev.dada.examples
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 dev.dada. All rights reserved.
