--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,14 +36,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_barcode_scanner: ^2.0.0
-  path: ^1.9.0
+  google_fonts: ^6.1.0
+  google_maps_flutter: ^2.5.3
+  http: ^1.2.1
   path_provider: ^2.1.2
+  path: ^1.9.0
   provider: ^6.1.1
+  shared_preferences: ^2.2.2
   sqflite: ^2.3.2
   url_launcher: ^6.2.4
-  google_maps_flutter: ^2.5.3
-  shared_preferences: ^2.2.2
-
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
